# pymdown-embedly

./: README.md  mkdocs.yml  pyproject.toml
docs/: index.md
pymdown_embedly/: embed.py
