[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymdown-embedly"
version = "1.0.0"
authors = [
  { name="Taisei Uemura", email="taiseiue@wsnet.jp" },
]
description = "Embedly card support for Python Markdown"
readme = "README.md"
requires-python = ">=3.5"
dependencies = [
    "markdown>=3.3.4"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Framework :: MkDocs",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/taiseiue/pymdown-embedly"
Issues = "https://github.com/taiseiue/pymdown-embedly/issues"

[project.entry-points."markdown.extensions"]
embedly = "pymdown_embedly.embed:EmbedlyExtension"

[tool.setuptools]
packages = ["pymdown_embedly"]
include-package-data = true
